# github-app

./: .dockerignore  Cargo.toml  Cargo_wasm.toml  Containerfile.api  Containerfile.dispatcher  Containerfile.frontend  Containerfile.sync  README.md
.github/workflows/: cd.yml  rust-ci.yml
jobs/sync/: Cargo.toml
jobs/sync/src/: main.rs
libs/auth/: Cargo.toml
libs/auth/src/: access_control.rs  lib.rs  session_id.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/database/: Cargo.toml  diesel.toml
libs/database/migrations/00000000000000_diesel_initial_setup/: up.sql
libs/database/migrations/00000000000001_uuidv7/: down.sql  up.sql
libs/database/migrations/2023-05-08-114751_create_users/: up.sql
libs/database/migrations/2023-05-11-102126_create_installations/: up.sql
libs/database/migrations/2023-05-11-115359_create_repositories/: down.sql  up.sql
libs/database/migrations/2023-05-16-102724_create_tasks/: down.sql  up.sql
libs/database/migrations/2024-09-21-192201_add_task_outcome/: down.sql  up.sql
libs/database/migrations/2024-09-30-144241_agent_configs/: down.sql  up.sql
libs/database/migrations/2024-11-05-150320_installation_repository_users/: down.sql  up.sql
libs/database/migrations/2024-11-21-184917_task_compute_usage/: down.sql  up.sql
libs/database/migrations/2025-01-19-173442_installation_users/: down.sql  up.sql
libs/database/migrations/2025-01-31-133115_user_openrouter/: down.sql  up.sql
libs/database/migrations/2025-02-02-143751_llm_interactions/: down.sql  up.sql
libs/database/src/: agent_configs.rs  conn.rs  installation_repository_users.rs  installation_users.rs  installations.rs  installations_repositories.rs  lib.rs  llm_interactions.rs  repositories.rs  schema.rs  task_compute_usage.rs  tasks.rs  users.rs
libs/database/src/models/: agent_configs.rs  installation_repository_users.rs  installation_users.rs  installations.rs  installations_repositories.rs  llm_interactions.rs  mod.rs  repositories.rs  task_compute_usage.rs  tasks.rs  users.rs
libs/database/src/types/: mod.rs  task_failure_reason.rs  task_status.rs  user_role.rs
libs/github/: Cargo.toml
libs/github/graphql/mutation/: add_comment.graphql  create_pull_request.graphql  create_repo.graphql
libs/github/graphql/query/: issue_id.graphql  issue_info.graphql  repo_numeric_id.graphql  user_info.graphql  viewer_info.graphql
libs/github/src/: client.rs  graphql.rs  lib.rs  types.rs  urls.rs  util.rs
libs/object-storage/: Cargo.toml
libs/object-storage/src/: lib.rs  tests.rs
libs/user-api/: Cargo.toml
libs/user-api/src/: api.rs  database.rs  lib.rs
services/api/: Cargo.toml
services/api/src/: git_proxy_auth.rs  main.rs
services/api/src/api/: mod.rs  repos.rs  tasks.rs  user.rs
services/api/src/api/agent/: mod.rs  task.rs
services/api/src/api/auth/: github.rs  mod.rs  openrouter.rs
services/api/src/api/chat/: mod.rs  storage.rs
services/api/src/webhooks/github/: headers.rs  mod.rs  verify_signature.rs
services/api/src/webhooks/github/events/: installation.rs  installation_repositories.rs  issue_comment.rs  issues.rs  mod.rs  ping.rs
services/dispatcher/: Cargo.toml
services/dispatcher/src/: main.rs  tokens.rs
services/dispatcher/src/cli/: mod.rs
services/dispatcher/src/daemon/: git.rs  job.rs  mod.rs
services/dispatcher/src/vm/: aws.rs  local.rs  mod.rs
web/frontend/: .gitignore  Cargo.toml  README.md  index.html
web/frontend/assets/style/: badge.scss  base.scss  colors.scss  const.scss  controls.scss  fonts.scss  footer.scss  header.scss  index.scss  landing.scss  loading.scss  logs.scss  modal.scss  navbar.scss  prompts.scss  reset.scss  tasks.scss  utils.scss
web/frontend/src/: auth.rs  main.rs  routes.rs  whitelabel.rs
web/frontend/src/api/: hooks.rs  http.rs  mod.rs
web/frontend/src/components/: footer.rs  loader.rs  loading.rs  mod.rs  modal.rs  navbar.rs  standard_page.rs  tab_bar.rs  text_input.rs  with_user.rs
web/frontend/src/errors/: error_modal.rs  mod.rs
web/frontend/src/pages/: landing.rs  legal_notice.rs  login.rs  logout.rs  mod.rs  privacy.rs  settings.rs
web/frontend/src/pages/get_access/: mod.rs
web/frontend/src/pages/repo/: mod.rs  remove_repo_modal.rs  remove_user_modal.rs
web/frontend/src/pages/repos/: add_repo_item.rs  add_repo_modal.rs  mod.rs  repo_item.rs
web/frontend/src/pages/task/: interaction_item.rs  llm_interactions.rs  logs.rs  message_item.rs  mod.rs  parse.rs  request.rs  response.rs
web/frontend/src/pages/tasks/: mod.rs  task_item.rs  task_status_indicator.rs
