[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
diesel-async = { version = "0.2", features = ["bb8", "postgres"] }
diesel = { version = "2", default-features = true, features = [
    "postgres",
    "chrono",
    "uuid",
    "32-column-tables",
    "serde_json",
] }
diesel_migrations = { version = "2", features = ["postgres"] }
# Async
futures-util = "0.3"
tokio = { version = "1.0" }
# Data
chrono = "0.4"
url = "2"
uuid = "1"
serde_json = "1"
# logging
log = "0.4"
# autominion
agent-api = { path = "../../framework/libs/agent-api" }
