[package]
name = "github"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
url = "2"
reqwest = { version = "0.11", features = ["json"] }
# data
graphql_client = { version = "0.12" }
serde = "1"
# auth
rsa = { version = "0.9" }
jwt-compact = { version = "0.8", features = ["ed25519-compact", "rsa"] }
# misc
once_cell = "1"
# workspace members
config = { path = "../config" }
