[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP related
actix-web = "4"
actix-governor = "0.4"
actix-web-httpauth = "0.8"
actix-files = "0.6"
url = "2"
reqwest = { version = "0.11", features = ["json", "stream"] }
# async
futures-util = "0.3"
# data
serde = "1"
serde_json = "1"
# auth
actix-jwt-auth-middleware = { git = "https://github.com/michaelvanstraten/actix-jwt-auth-middleware.git", rev = "89d579d0ae1e18c39da57863f94072a2f609739d" }
jwt-compact = { version = "0.8", features = ["ed25519-compact", "rsa"] }
ed25519-compact = "2"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22"
# GitHub
graphql_client = { version = "0.12" }
# logging
log = "0.4"
env_logger = "0.10"
# misc
uuid = "1"
async-trait = "0.1"
once_cell = "1"
# error handling
thiserror = "1"
# workspace members
user-api = { path = "../../libs/user-api", features = ["database"] }
config = { path = "../../libs/config" }
github = { path = "../../libs/github" }
database = { path = "../../libs/database" }
auth = { path = "../../libs/auth" }
object-storage = { path = "../../libs/object-storage" }
# autominion framework
agent-api = { path = "../../framework/libs/agent-api" }
git-proxy = { path = "../../framework/libs/git-proxy" }
llm-proxy = { path = "../../framework/libs/llm-proxy" }
