[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# config
serde = "1"
serde_json = "1"
toml = "0.7"
# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = { version = "0.1" }
tokio-stream = { version = "0.1" }
futures = "0.3"
futures-util = "0.3"
# aws
aws-sdk-ec2 = "0.26"
aws-types = "0.55"
aws-credential-types = "0.55"
# ssh
async-ssh2-lite = { version = "0.4", features = ["tokio"] }
# websockets
tokio-native-tls = "0.3"
url = "2"
# git
tempfile = "3"
git2 = { version = "0.17", default-features = false, features = ["https"] }
# cli
clap = { version = "4", features = ["derive"] }
shlex = "1"
# auth
chrono = { version = "0.4", features = ["serde"] }
# misc
rand = "0.8"
uuid = "1"
log = "0.4"
# workspace members
config = { path = "../../libs/config" }
github = { path = "../../libs/github" }
database = { path = "../../libs/database" }
auth = { path = "../../libs/auth" }
object-storage = { path = "../../libs/object-storage" }
